--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 <body>
 <h1>SIPreview</h1>
 
+<h3>Choose the local(s) zip file(s)</h3>
+<p class="note">Note : your browser will process the zip file, don't choose a file too big !</p>
+<input type="file" id="file" name="file" multiple /><br />
+
+<div id="result_block" class="hidden">
+    <h3>Content :</h3>
+    <div id="result"></div>
+</div>
+
 <script src="./dist/app.js"></script>
 </body>
 </html>
