вывод темы, стоимости, ответа

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <div id="jsGameQuestion" class="game__question"></div>
+            </div>
         </div>
     </div>
 
